--- a/app/views/layouts/rails_live_dashboard/application.html.erb
+++ b/app/views/layouts/rails_live_dashboard/application.html.erb
@@ -8,7 +8,7 @@
   <%= stylesheet_link_tag    "rails_live_dashboard/application", data_turbo_track: 'reload', media: "all" %>
   <%= javascript_include_tag "rails_live_dashboard/application", data_turbo_track: 'reload', defer: true %>
 </head>
-<body class="bg-red-50">
+<body class="bg-gray-200 pb-10">
   <%= render partial: "rails_live_dashboard/shared/header" %>
 
   <main class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
