--- a/app/views/rails_live_dashboard/shared/_header.html.erb
+++ b/app/views/rails_live_dashboard/shared/_header.html.erb
@@ -1,39 +1,41 @@
-<nav class="bg-red-700" data-controller="reveal">
-  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-    <div class="flex h-16 items-center justify-between">
-      <div class="flex items-center">
-        <div class="flex-shrink-0">
-          <h1 class="text-white">Live Dashboard</h1>
-        </div>
-        <div class="hidden sm:ml-6 sm:block">
-          <div class="flex space-x-4">
-            <%= link_to 'Home', home_path, class: class_names('rounded-md px-3 py-2 text-sm font-medium', 'text-gray-300 hover:bg-white hover:text-red-700': !current_page?(home_path), 'bg-white text-red-700': current_page?(home_path)) %>
-            <%= link_to 'Requests', requests_path, class: class_names('rounded-md px-3 py-2 text-sm font-medium', 'text-gray-300 hover:bg-white hover:text-red-700': !current_page?(requests_path), 'bg-white text-red-700': current_page?(requests_path)) %>
-            <%= link_to 'Exceptions', exceptions_path, class: class_names('rounded-md px-3 py-2 text-sm font-medium', 'text-gray-300 hover:bg-white hover:text-red-700': !current_page?(exceptions_path), 'bg-white text-red-700': current_page?(exceptions_path)) %>
-          </div>
+<header class="bg-gray-800" data-controller="reveal">
+  <div class="mx-auto max-w-7xl px-2 sm:px-4 lg:divide-y lg:divide-gray-700 lg:px-8">
+    <div class="relative flex h-16 justify-between">
+      <div class="relative z-10 flex px-2 lg:px-0">
+        <div class="flex flex-shrink-0 items-center">
+          <h1 class="text-xl text-white">Live Dashboard</h1>
         </div>
       </div>
-      
-      <div class="-mr-2 flex sm:hidden">
-        <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false" data-action="click->reveal#toggle">
-          <span class="absolute -inset-0.5"></span>
-          <span class="sr-only">Open main menu</span>
-          <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-          </svg>
-          <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-          </svg>
+      <div class="relative z-10 flex items-center lg:hidden">
+        <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false" data-action="click->reveal#toggle">
+          <%= lucide_icon('menu', class: 'block h-6 w-6', 'data-reveal-target': 'item') %>
+          <%= lucide_icon('x', class: 'hidden h-6 w-6', 'data-reveal-target': 'item') %>
         </button>
       </div>
+      <div class="hidden lg:relative lg:z-10 lg:ml-4 lg:flex lg:items-center">
+        <%= link_to clean_path, title: 'Clear all data', data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white' do %>
+          <span class="sr-only">Clear records</span>
+          <%= lucide_icon('trash', class: 'h-6 w-6') %>
+        <% end %>
+      </div>
     </div>
+
+    <nav class="hidden lg:flex lg:space-x-8 lg:py-2" aria-label="Global">
+      <%= link_to 'Dashboard', dashboard_path, class: class_names('text-gray-300 hover:bg-gray-700 hover:text-white inline-flex items-center rounded-md py-2 px-3 text-sm font-medium', 'bg-gray-900 text-white': current_page?(dashboard_path)) %>
+      <%= link_to 'Requests', requests_path, class: class_names('text-gray-300 hover:bg-gray-700 hover:text-white inline-flex items-center rounded-md py-2 px-3 text-sm font-medium', 'bg-gray-900 text-white': current_page?(requests_path)) %>
+      <%= link_to 'Exceptions', exceptions_path, class: class_names('text-gray-300 hover:bg-gray-700 hover:text-white inline-flex items-center rounded-md py-2 px-3 text-sm font-medium', 'bg-gray-900 text-white': current_page?(exceptions_path)) %>
+    </nav>
   </div>
 
-  <div class="hidden" id="mobile-menu" data-reveal-target="item">
+  <nav class="hidden" aria-label="Global" id="mobile-menu" data-reveal-target="item">
     <div class="space-y-1 px-2 pb-3 pt-2">
-      <%= link_to 'Home', home_path, class: class_names('block rounded-md px-3 py-2 text-base font-medium', 'text-gray-300 hover:bg-white hover:text-red-700': !current_page?(home_path), 'bg-white text-red-700': current_page?(home_path)) %>
-      <%= link_to 'Requests', requests_path, class: class_names('block rounded-md px-3 py-2 text-base font-medium', 'text-gray-300 hover:bg-white hover:text-red-700': !current_page?(requests_path), 'bg-white text-red-700': current_page?(requests_path)) %>
-      <%= link_to 'Exceptions', exceptions_path, class: class_names('block rounded-md px-3 py-2 text-base font-medium', 'text-gray-300 hover:bg-white hover:text-red-700': !current_page?(exceptions_path), 'bg-white text-red-700': current_page?(exceptions_path)) %>
+      <%= link_to 'Clear all data', clean_path, title: 'Clear all data', data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md py-2 px-3 text-base font-medium' %>
     </div>
-  </div>
-</nav>
+    <hr class='my-2 border-gray-500' />
+    <div class="space-y-1 px-2 pb-3 pt-2">  
+      <%= link_to 'Dashboard', dashboard_path, class: class_names('text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md py-2 px-3 text-base font-medium', 'bg-gray-900 text-white': current_page?(dashboard_path)) %>
+      <%= link_to 'Requests', requests_path, class: class_names('text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md py-2 px-3 text-base font-medium', 'bg-gray-900 text-white': current_page?(requests_path)) %>
+      <%= link_to 'Exceptions', exceptions_path, class: class_names('text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md py-2 px-3 text-base font-medium', 'bg-gray-900 text-white': current_page?(exceptions_path)) %>
+    </div>
+  </nav>
+</header>
