--- a/app/views/rails_live_dashboard/requests/show.html.erb
+++ b/app/views/rails_live_dashboard/requests/show.html.erb
@@ -12,7 +12,7 @@
         <div class="p-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
           <dt class="text-sm font-medium text-gray-900">Method</dt>
           <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
-            <%= render RailsLiveDashboard::Request::MethodBadgeComponent.new(@request.method) %>
+            <%= render RailsLiveDashboard::Request::MethodBadgeComponent.new(@request.method, @request.turbo_stream?) %>
           </dd>
         </div>
         <div class="p-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
