--- a/app/views/rails_live_dashboard/requests/_tabs.html.erb
+++ b/app/views/rails_live_dashboard/requests/_tabs.html.erb
@@ -7,7 +7,7 @@
   <nav class="isolate flex rounded-t-lg shadow" aria-label="Tabs">
     <button id="tab_payload" class="w-1/3 text-gray-500 hover:text-gray-700 border-b-2 py-4 px-1 text-center text-sm font-medium" data-tabs-target="button" data-action="click->tabs#select">Payload</button>
     <button id="tab_headers" class="w-1/3 text-gray-500 hover:text-gray-700 border-b-2 py-4 px-1 text-center text-sm font-medium" data-tabs-target="button" data-action="click->tabs#select">Headers</button>
-    <button id="tab_response" class="w-1/3 text-gray-500 hover:text-gray-700 border-b-2 py-4 px-1 text-center text-sm font-medium" data-tabs-target="button" data-action="click->tabs#select">Response</button>
+    <button id="tab_body" class="w-1/3 text-gray-500 hover:text-gray-700 border-b-2 py-4 px-1 text-center text-sm font-medium" data-tabs-target="button" data-action="click->tabs#select">Body</button>
   </nav>
 
   <div class="p-5 bg-gray-800 text-white">
@@ -19,8 +19,8 @@
       <pre><%= JSON.pretty_generate(@request.headers || {}) %></pre>
     </div>
 
-    <div data-tabs-target="tab" id="tab_response">
-      <pre><%= @request.response || "No response" %></pre>
+    <div data-tabs-target="tab" id="tab_body">
+      <pre><%= @request.body || "No body" %></pre>
     </div>
   </div>
 </div>
