--- a/app/views/rails_live_dashboard/requests/index.html.erb
+++ b/app/views/rails_live_dashboard/requests/index.html.erb
@@ -27,11 +27,11 @@
               <% @requests.each do |req| %>
               <tr>
                 <td class="whitespace-nowrap py-4 pl-4 pr-3 sm:pl-6">
-                  <%= render RailsLiveDashboard::Request::MethodBadgeComponent.new(req.method) %>
+                  <%= render RailsLiveDashboard::RequestMethodBadgeComponent.new(req.method) %>
                 </td>
                 <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= req.path %></td>
                 <td class="whitespace-nowrap px-3 py-4">
-                  <%= render RailsLiveDashboard::Request::StatusBadgeComponent.new(req.status_code) %>
+                  <%= render RailsLiveDashboard::RequestStatusBadgeComponent.new(req.status_code) %>
                 </td>
                 <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= req.created_at %></td>
                 <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
