feat: implemented queries feature

--- a/app/views/rails_live_dashboard/exceptions/index.html.erb
+++ b/app/views/rails_live_dashboard/exceptions/index.html.erb
@@ -39,7 +39,7 @@
                     <%= exception.occurrences %>
                   </td>
                   <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
-                    <%= exception.created_at %>
+                    <%= exception.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
                     </td>
                   <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
                     <%= link_to 'Show', exception_path(exception), class: 'text-indigo-600 hover:text-indigo-900' %>
