--- a/app/views/rails_live_dashboard/requests/show.html.erb
+++ b/app/views/rails_live_dashboard/requests/show.html.erb
@@ -7,7 +7,7 @@
       <dl class="divide-y divide-gray-100">
         <div class="p-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
           <dt class="text-sm font-medium text-gray-900">Date</dt>
-          <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0"><%= @request.created_at %></dd>
+          <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0"><%= @request.created_at.strftime("%Y-%m-%d %H:%M:%S") %></dd>
         </div>
         <div class="p-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
           <dt class="text-sm font-medium text-gray-900">Method</dt>
@@ -41,6 +41,6 @@
     </div>
   </div>
 
-  <%= render partial: 'tabs' %>
-  <%= render partial: 'exception' if @exceptions.size > 0 %>
+  <%= render 'contents' %>
+  <%= render 'relateds' %>
 </div>
