--- a/app/views/rails_live_dashboard/requests/index.html.erb
+++ b/app/views/rails_live_dashboard/requests/index.html.erb
@@ -33,7 +33,7 @@
                 <td class="whitespace-nowrap px-3 py-4">
                   <%= render RailsLiveDashboard::RequestStatusBadgeComponent.new(req.status_code) %>
                 </td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= req.created_at %></td>
+                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= req.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
                 <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
                   <%= link_to 'Show', request_path(req), class: 'text-indigo-600 hover:text-indigo-900' %>
                 </td>
