fix: update path with engine prefix

--- a/app/views/rails_live_dashboard/queries/_list.html.erb
+++ b/app/views/rails_live_dashboard/queries/_list.html.erb
@@ -18,7 +18,7 @@
         </td>
       </tr>
     <% end %>
-    
+
     <% @queries.each do |query| %>
     <tr>
       <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-800">
@@ -35,7 +35,7 @@
         <%= query.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
       </td>
       <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-        <%= link_to 'Show', query_path(query), class: 'text-indigo-600 hover:text-indigo-900' %>
+        <%= link_to 'Show', rails_live_dashboard.query_path(query), class: 'text-indigo-600 hover:text-indigo-900' %>
       </td>
     </tr>
     <% end %>
