--- a/app/views/rails_live_dashboard/requests/_exceptions.html.erb
+++ b/app/views/rails_live_dashboard/requests/_exceptions.html.erb
@@ -17,22 +17,22 @@
           <tbody class="divide-y divide-gray-200 bg-white">
           <% @exceptions.each do |exception| %>
             <tr>
-                <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
-                  <div class="min-w-0 flex-auto">
-                    <p class="text-sm font-semibold leading-6 text-gray-900">
-                      <%= exception.class_name %>
-                    </p>
-                    <p class="mt-1 truncate text-xs leading-5 text-gray-500">
-                      <%= exception.message %>
-                    </p>
-                  </div>
+              <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
+                <div class="min-w-0 flex-auto">
+                  <p class="text-sm font-semibold leading-6 text-gray-900">
+                    <%= exception.class_name %>
+                  </p>
+                  <p class="mt-1 truncate text-xs leading-5 text-gray-500">
+                    <%= exception.message %>
+                  </p>
+                </div>
+              </td>
+              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                <%= exception.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
                 </td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
-                  <%= exception.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
-                  </td>
-                <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                  <%= link_to 'Show', exception_path(exception), class: 'text-indigo-600 hover:text-indigo-900' %>
-                </td>
+              <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
+                <%= link_to 'Show', rails_live_dashboard.exception_path(exception), class: 'text-indigo-600 hover:text-indigo-900' %>
+              </td>
             </tr>
           <% end %>
           </tbody>
