--- a/app/views/rails_live_dashboard/exceptions/index.html.erb
+++ b/app/views/rails_live_dashboard/exceptions/index.html.erb
@@ -42,7 +42,7 @@
                     <%= exception.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
                     </td>
                   <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                    <%= link_to 'Show', exception_path(exception), class: 'text-indigo-600 hover:text-indigo-900' %>
+                    <%= link_to 'Show', rails_live_dashboard.exception_path(exception), class: 'text-indigo-600 hover:text-indigo-900' %>
                   </td>
               </tr>
             <% end %>
