--- a/app/views/rails_live_dashboard/queries/index.html.erb
+++ b/app/views/rails_live_dashboard/queries/index.html.erb
@@ -1,3 +1,5 @@
+<%= turbo_stream_from "query_list" %>
+
 <div class="mt-10">
   <div class="mt-8 flow-root">
     <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
