--- a/app/views/rails_live_dashboard/exceptions/show.html.erb
+++ b/app/views/rails_live_dashboard/exceptions/show.html.erb
@@ -1,7 +1,8 @@
 <div class="flex flex-col mt-10 gap-10">
   <div class="overflow-hidden bg-white shadow sm:rounded-lg">
     <div class="px-4 py-6 sm:px-6">
-      <h3 class="text-lg font-semibold leading-7 text-gray-900">Exception Details</h3>
+      <h3 class="text-lg font-semibold text-gray-900"><%= @exception.content.class %></h3>
+      <p class="mt-1 text-gray-500"><%= @exception.content.message %></p>
     </div>
     <div class="border-t border-gray-100">
       <dl class="divide-y divide-gray-100">
@@ -10,27 +11,15 @@
           <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0"><%= @exception.created_at.strftime("%Y-%m-%d %H:%M:%S") %></dd>
         </div>
         <div class="p-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-          <dt class="text-sm font-medium text-gray-900">Class</dt>
-          <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
-            <%= @exception.class_name %>
-          </dd>
-        </div>
-        <div class="p-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-          <dt class="text-sm font-medium text-gray-900">Message</dt>
-          <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
-            <%= @exception.message %>
-          </dd>
-        </div>
-        <div class="p-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
           <dt class="text-sm font-medium text-gray-900">File</dt>
           <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
-            <%= @exception.file %>:<%= @exception.line %>
+            <%= @exception.content.file %>:<%= @exception.content.line %>
           </dd>
         </div>
         <div class="p-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
           <dt class="text-sm font-medium text-gray-900">Occurrences</dt>
           <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
-            <%= @exception.occurrences %>
+            <%= @exception.content.occurrences %>
           </dd>
         </div>
       </dl>
