--- a/app/views/rails_live_dashboard/jobs/show.html.erb
+++ b/app/views/rails_live_dashboard/jobs/show.html.erb
@@ -10,10 +10,13 @@
         <dt class="text-sm font-medium text-gray-900">Date</dt>
         <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0"><%= @job.created_at.strftime("%Y-%m-%d %H:%M:%S") %></dd>
       </div>
+      
+      <% if @job.performed? || @job.discarted? %>
       <div class="p-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
         <dt class="text-sm font-medium text-gray-900">Duration</dt>
         <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0"><%= @job.content.duration %> ms</dd>
       </div>
+      <% end %>
     </dl>
   </div>
 
