--- a/app/views/rails_live_dashboard/requests/_exceptions.html.erb
+++ b/app/views/rails_live_dashboard/requests/_exceptions.html.erb
@@ -20,10 +20,10 @@
               <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
                 <div class="min-w-0 flex-auto">
                   <p class="text-sm font-semibold leading-6 text-gray-900">
-                    <%= exception.class_name %>
+                    <%= exception.content.class %>
                   </p>
                   <p class="mt-1 truncate text-xs leading-5 text-gray-500">
-                    <%= exception.message %>
+                    <%= exception.content.message %>
                   </p>
                 </div>
               </td>
